--- a/KDD-2024/Notebooks/part7_deep_learning_based.ipynb
+++ b/KDD-2024/Notebooks/part7_deep_learning_based.ipynb
@@ -839,7 +839,7 @@
    "source": [
     "## Performance on the UCR univariate classification datasets <a id='evaluation'></a>\n",
     "\n",
-    "Below we show the performance of the `MLP`, `InceptionTime` and `H-InceptionTime` deep learning models on the UCR TSC archive datasets [[4]](#references) using results from the TSC bake off in 2024 [[5]](#references)."
+    "Below we show the performance of the `MLP`, `InceptionTime` and `H-InceptionTime` deep learning models on the UCR TSC archive datasets [[9]](#references) using results from the TSC bake off in 2024 [[5]](#references)."
    ]
   },
   {
@@ -933,7 +933,9 @@
     "\n",
     "[7] Zhao et al. Convolutional neural networks for time series classification. Journal of Systems Engineering and Electronics 28.1 (2017)\n",
     "\n",
-    "[8] Ismail-Fawaz, Ali, et al. \"Lite: Light inception with boosting techniques for time series classification.\" 2023 IEEE 10th International Conference on Data Science and Advanced Analytics (DSAA). IEEE, 2023."
+    "[8] Ismail-Fawaz, Ali, et al. \"Lite: Light inception with boosting techniques for time series classification.\" 2023 IEEE 10th International Conference on Data Science and Advanced Analytics (DSAA). IEEE, 2023.\n",
+    "\n",
+    "[9] Dau, Hoang Anh, et al. \"The UCR time series archive.\" IEEE/CAA Journal of Automatica Sinica 6.6 (2019): 1293-1305."
    ]
   }
  ],
