--- a/KDD-2024/Notebooks/part1_introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_introduction.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
     "# Remove this cell if you are interested in finding out what is changing soon, for\n",
@@ -65,12 +65,11 @@
     "\n",
     "This tutorial will use EEG data as a working example. The classification dataset is\n",
     "made of EEG readings taken from a subject when at rest or when performing a set task\n",
-    "(raising arms). Full info on this data can be found in the `aeon-neuro` [notebook]\n",
-    "(https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb).\n",
+    "(raising arms). Full info on this data can be found in the `aeon-neuro` [notebook](https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb).\n",
     "Please do not over interpret any results from this data, it is a simple toy problem to demonstrate functionality.\n",
     "\n",
     "`aeon` ships with some standard UCR and UEA datasets, and can download them all\n",
-    "directly from [timeseriesclassification.com](timeseriesclassification.com)."
+    "directly from [timeseriesclassification.com](https://timeseriesclassification.com)."
    ],
    "metadata": {
     "collapsed": false
@@ -104,7 +103,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
