--- a/KDD-2024/Notebooks/part9_hybrids.ipynb
+++ b/KDD-2024/Notebooks/part9_hybrids.ipynb
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Single channel EEG TSC problem accuracy: 0.675\n",
-      "Single channel EEG TSC problem accuracy: 0.625\n"
+      "Single channel EEG TSC problem accuracy: 0.7\n",
+      " Component weights= {}\n"
      ]
     }
    ],
