--- a/KDD-2024/Notebooks/part2_distance_based.ipynb
+++ b/KDD-2024/Notebooks/part2_distance_based.ipynb
@@ -30,17 +30,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                             name  \\\n0                 ElasticEnsemble   \n1  KNeighborsTimeSeriesClassifier   \n2                   ProximityTree   \n\n                                           estimator  \n0  <class 'aeon.classification.distance_based._el...  \n1  <class 'aeon.classification.distance_based._ti...  \n2  <class 'aeon.classification.distance_based._pr...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ElasticEnsemble</td>\n      <td>&lt;class 'aeon.classification.distance_based._el...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighborsTimeSeriesClassifier</td>\n      <td>&lt;class 'aeon.classification.distance_based._ti...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ProximityTree</td>\n      <td>&lt;class 'aeon.classification.distance_based._pr...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
     "# Remove this cell if you are interested in finding out what is changing soon, for\n",
     "# aeon there will be big changes in out v1.0.0 release!\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "from aeon.registry import all_estimators\n",
+    "all_estimators(\n",
+    "    \"classifier\", filter_tags={\"algorithm_type\": \"distance\"}, as_dataframe=True\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                            name  \\\n0  KNeighborsTimeSeriesRegressor   \n\n                                           estimator  \n0  <class 'aeon.regression.distance_based._time_s...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>KNeighborsTimeSeriesRegressor</td>\n      <td>&lt;class 'aeon.regression.distance_based._time_s...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_estimators(\n",
+    "    \"regressor\", filter_tags={\"algorithm_type\": \"distance\"}, as_dataframe=True\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
