--- a/KDD-2024/Notebooks/part2_distance_based.ipynb
+++ b/KDD-2024/Notebooks/part2_distance_based.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KDD Hands on tutorial, Barcelona 2024\n",
-    "\n",
+    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Part 2: distances measures and distance based classification and regression\n",
     "\n",
     "Similarity-based approaches were one of the first proposals for tackling the\n",
@@ -26,11 +30,14 @@
     "The `aeon` documentation contains notebooks on [distances](https://www.aeon-toolkit.org/en/stable/examples/distances/distances.html) and [distance based\n",
     "classification](https://www.aeon-toolkit.org/en/stable/examples/classification/distance_based.html)and using `aeon` distances\n",
     " with [sklearn](https://www.aeon-toolkit.org/en/stable/examples/distances/sklearn_distances.html)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +45,7 @@
       "text/plain": "                             name  \\\n0                 ElasticEnsemble   \n1  KNeighborsTimeSeriesClassifier   \n2                   ProximityTree   \n\n                                           estimator  \n0  <class 'aeon.classification.distance_based._el...  \n1  <class 'aeon.classification.distance_based._ti...  \n2  <class 'aeon.classification.distance_based._pr...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ElasticEnsemble</td>\n      <td>&lt;class 'aeon.classification.distance_based._el...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighborsTimeSeriesClassifier</td>\n      <td>&lt;class 'aeon.classification.distance_based._ti...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ProximityTree</td>\n      <td>&lt;class 'aeon.classification.distance_based._pr...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "                            name  \\\n0  KNeighborsTimeSeriesRegressor   \n\n                                           estimator  \n0  <class 'aeon.regression.distance_based._time_s...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>KNeighborsTimeSeriesRegressor</td>\n      <td>&lt;class 'aeon.regression.distance_based._time_s...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
