--- a/KDD-2024/Notebooks/part1_introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_introduction.ipynb
@@ -3,8 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# KDD Hands on tutorial, Barcelona 2024\n",
-    "\n",
+    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Part 1: An Introduction to Time Series Classification (TSC) and Regression (TSER)\n",
     "\n",
     "This is the notebook associated with the introduction to the hands-on tutorial on time series classification and regression. The tutorial website is [here](https://aeon-tutorials.github.io/KDD-2024/) and the structure is listed [here](https://aeon-tutorials.github.io/KDD-2024/schedule.html). There are ten sections, with a separate notebook for each section. The sections are:\n",
