dict and int notebook

--- a/KDD-2024/Notebooks/part6_dictionary_based.ipynb
+++ b/KDD-2024/Notebooks/part6_dictionary_based.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionary Based Methods for Time Series in `aeon`\n",
+    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Dictionary-based Time Series Machine Learning in `aeon`\n",
     "\n",
     "Similar to other subseries extraction algorithms, dictionary approaches identify phase-independent subseries within time series data. These approaches convert each window into a sequence of discrete symbols, commonly referred to as a word. Dictionary methods differentiate themselves by analyzing word frequency, a concept often described as a bag-of-words approach. Figure 20 illustrates the process used by algorithms following the dictionary model to create a classifier. This process can be summarized as follows:\n",
     "\n",
@@ -12,7 +18,10 @@
     "2. Converting each window of real values into a discrete-valued word (a sequence of symbols from a fixed alphabet);\n",
     "3. Constructing a sparse feature vector based on histograms of word counts; and\n",
     "4. Finally, applying a machine learning classification method to these feature vectors."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -35,19 +44,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                         name  \\\n0                BOSSEnsemble   \n1            ContractableBOSS   \n2                        MUSE   \n3                  OrdinalTDE   \n4                   REDCOMETS   \n5  TemporalDictionaryEnsemble   \n6                      WEASEL   \n7                   WEASEL_V2   \n\n                                           estimator  \n0  <class 'aeon.classification.dictionary_based._...  \n1  <class 'aeon.classification.dictionary_based._...  \n2  <class 'aeon.classification.dictionary_based._...  \n3  <class 'aeon.classification.ordinal_classifica...  \n4  <class 'aeon.classification.dictionary_based._...  \n5  <class 'aeon.classification.dictionary_based._...  \n6  <class 'aeon.classification.dictionary_based._...  \n7  <class 'aeon.classification.dictionary_based._...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>BOSSEnsemble</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ContractableBOSS</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>MUSE</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>OrdinalTDE</td>\n      <td>&lt;class 'aeon.classification.ordinal_classifica...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>REDCOMETS</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>TemporalDictionaryEnsemble</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>WEASEL</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>WEASEL_V2</td>\n      <td>&lt;class 'aeon.classification.dictionary_based._...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
-    "# Remove this cell if you are interested in finding out what is changing soon, for \n",
+    "# Remove this cell if you are interested in finding out what is changing soon, for\n",
     "# aeon there will be big changes in out v1.0.0 release!\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "from aeon.registry import all_estimators\n",
+    "all_estimators(\n",
+    "    \"classifier\", filter_tags={\"algorithm_type\": \"dictionary\"}, as_dataframe=True\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: [name, estimator]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>estimator</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_estimators(\n",
+    "    \"regressor\", filter_tags={\"algorithm_type\": \"dictionary\"}, as_dataframe=True\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -58,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +568,7 @@
     "dimensional datasets.” Proceedings of the 15th international conference on extending database technology. 2012.\n",
     "\n",
     "[4] Schäfer, Patrick. ”The BOSS is concerned with time series classification in the presence of noise.” Data Mining and\n",
-    "Knowledge Discovery 29 (2015): 1505-1530..  \n",
+    "Knowledge Discovery 29 (2015): 1505-1530..\n",
     "\n",
     "[5] Nguyen, Thach Le, and Georgiana Ifrim. ”Fast time series classification with random symbolic subsequences.”\n",
     "Advanced Analytics and Learning on Temporal Data: 7th ECML PKDD Workshop, AALTD 2022\n",
