--- a/KDD-2024/Notebooks/part6_dictionary_based.ipynb
+++ b/KDD-2024/Notebooks/part6_dictionary_based.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Dictionary Based Methods for Time Series in `aeon`\n",
     "\n",
-    "Similar to other subseries extraction algorithms, dictionary approaches identify phase-independent subseries within time series data. These approaches convert each window into a sequence of discrete symbols, commonly referred to as a word. Dictionary methods differentiate themselves by analyzing word frequency, a concept often described as a bag-of-words approach. Figure 20 illustrates the process used by algorithms following the dictionary model to create a classifier. This process can be summarized as follows:\n",
+    "Similar to other subseries extraction algorithms, dictionary approaches identify phase-independent subseries within time series data. These approaches convert each window into a sequence of discrete symbols, commonly referred to as a word. Dictionary methods differentiate themselves by analyzing word frequency, a concept often described as a bag-of-words approach. The process of dictionary based methods can be summarized as follows:\n",
     "\n",
     "1. Extracting subseries, or windows, from the time series;\n",
     "2. Converting each window of real values into a discrete-valued word (a sequence of symbols from a fixed alphabet);\n",
