--- a/KDD-2024/Notebooks/part6_dictionary_based.ipynb
+++ b/KDD-2024/Notebooks/part6_dictionary_based.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
     "from aeon.transformations.collection.dictionary_based import SFA\n",
     "\n",
     "sfa_transformer = SFA(word_length=5)\n",
-    "X_train_c_sfa = sfa_transformer.fit_transform(X_train_c)\n",
+    "X_train_c_sfa = sfa_transformer.fit(X_train_c).transform_words(X_train_c)\n",
     "print(X_train_c_sfa)"
    ]
   },
