dict and int notebook

--- a/KDD-2024/Notebooks/part8_shapelet_based.ipynb
+++ b/KDD-2024/Notebooks/part8_shapelet_based.ipynb
@@ -9,12 +9,50 @@
     }
    },
    "source": [
-    "# Shapelet based time series machine learning\n",
+    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Shapelet-based Time Series Machine Learning in `aeon`\n",
     "\n",
-    "In this notebook, our goal is to introduce the use of Shapelets for time series machine learning. We provide examples on how to use shapelet-based transformations, classification and regression estimators with the two KDD examples datasets. We also show how to use the visualization tools associated with these estimators.\n",
+    "In this notebook, our goal is to introduce the use of shapelets for time series\n",
+    "machine learning. We provide examples on how to use shapelet-based transformations, classification and regression estimators with the two KDD examples datasets. We also show how to use the visualization tools associated with these estimators.\n",
+    "\n",
+    "Currently, seven published interval-based approaches are implemented in `aeon`, all of which can handle classification and five of which can handle regression. These are:\n",
+    "\n",
+    "- Shapelet Transform Classifier (STC) [[1]](#references)\n",
+    "- Random Interval Spectral Ensemble (RISE) [[2]](#references)\n",
+    "- Canonical Interval Forest (CIF) [[3]](#references)\n",
+    "- Diverse Representation Canonical Interval Forest (DrCIF) [[4]](#references)\n",
+    "- Supervised Time Series Forest (STSF) [[5]](#references)\n",
+    "- Random Supervised Time Series Forest (R-STSF) [[6]](#references)\n",
+    "- QUANT [[7]](#references)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "Let's us first make some imports and load the datasets (this can take some time if this is the first time you import these !):"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -113,7 +151,7 @@
     "\n",
     "<img src=\"img/shp_general.png\" alt=\"drawing\" width=\"700\"/>\n",
     "\n",
-    "First the $k$ shapelets are generated using the training data (with $k$ a parameter), then, by performing the Shapelet Transform with the generated shapelets and some time series dataset with $n$ samples, we obtain a feature matrix of size $(n,k)$, this matrix is then used by a tabular classifier, such as each sample is described by $k$ features obtained by using the shapelets. \n",
+    "First the $k$ shapelets are generated using the training data (with $k$ a parameter), then, by performing the Shapelet Transform with the generated shapelets and some time series dataset with $n$ samples, we obtain a feature matrix of size $(n,k)$, this matrix is then used by a tabular classifier, such as each sample is described by $k$ features obtained by using the shapelets.\n",
     "\n",
     "This step shapelet generation and feature extraction can be made using estimators in `aeon.transformation.collection.shapelet_based`, for example, using the `RandomShapeletTransform`:"
    ]
@@ -142,7 +180,7 @@
     "\n",
     "$\\displaystyle{\\min\\limits_{i\\ :1, \\ldots, m-l+1} \\sqrt{\\sum_{j=0}^{l-1}(\\mathbf{s}_j - \\mathbf{x}_{i+j})^2}}$\n",
     "\n",
-    "This represents the core idea that the distance of a shapelet to a time series is defined as the distance between the shapelet and the best matching subsequence of the same size in $X$. We can illustrate this formula with the following image, where we would extract the minimum from the values $v$ : \n",
+    "This represents the core idea that the distance of a shapelet to a time series is defined as the distance between the shapelet and the best matching subsequence of the same size in $X$. We can illustrate this formula with the following image, where we would extract the minimum from the values $v$ :\n",
     "\n",
     "<img src=\"img/ex_shp_simple.png\" alt=\"drawing\" width=\"500\"/>"
    ]
@@ -163,7 +201,7 @@
     "- $\\text{argmin} V$ : the location of the best match, where the location is the position of the front of the shapelet\n",
     "- $\\sum_i I(v_i < \\lambda)$ : the shapelet occurence feature, which counts how many times $S$ was $\\lambda$-close to $X$ (with $I$ the identity function).\n",
     "\n",
-    "Adding more features allows shapelets to be discriminative with respect to more criterions (number of $\\lambda-close$ matches, location of best match) than only the best match distance "
+    "Adding more features allows shapelets to be discriminative with respect to more criterions (number of $\\lambda-close$ matches, location of best match) than only the best match distance"
    ]
   },
   {
@@ -238,13 +276,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The four graphs each aid in the interpretability of shapelet-based algorithms. Here we take the most discriminating shapelet of class 0 and explore it for both local and global patterns. \n",
+    "The four graphs each aid in the interpretability of shapelet-based algorithms. Here we take the most discriminating shapelet of class 0 and explore it for both local and global patterns.\n",
     "\n",
     "- Boxplot of Min (Top Left): This graph introduces a new perspective by focusing on a global quality of the shapelet. It shows the distribution of the minimum distances between the shapelet and each time series across different classes. As expected, the shapelet fits class 0 more closely than the other classes.\n",
     "\n",
     "- Best Match on Examples (Top Right): This graph extends the best match visualization by showing how the shapelet fits a random time series from each class. The green and orange curves represent samples from classes 1 and 0, respectively. The shapelet should, and does, align more closely with the organge time series of class 0, illustrating its effectiveness in distinguishing between the two classes according to a local pattern.\n",
     "\n",
-    "- Shapelet Params (Bottom Left): This graph, already introduced, elegantly displays the shapelet's pattern over time. \n",
+    "- Shapelet Params (Bottom Left): This graph, already introduced, elegantly displays the shapelet's pattern over time.\n",
     "\n",
     "- Distance Vectors of Examples (Bottom Right): This graph is an extension of the distance vector visualization, offering a comparison of how well the shapelet fits the two time series, from the 'Best Match on Examples' graph, at each point. This allows for a global understanding of how well the shapelet fits a time series at any point."
    ]
@@ -317,6 +355,22 @@
    "source": [
     "To compare the performance of shapelet to the other SotA method, we compare `RDSTClassifier` and `ShapeletTransformClassifier` to `Rocket` and `HC2`. Notice how `RDST`and `ROCKET` are considered equivalent, which is not surprising as `RDST` shares many similarities with `ROCKET`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## References <a id='references'></a>\n",
+    "\n",
+    "[1]  J. Lines, LM Davis, J Hills, A Bagnall, A shapelet transform for time series\n",
+    "classification, Proceedings of the 18th ACM SIGKDD international conference on\n",
+    "Knowledge, 2012\n",
+    "[2] J Hills, J Lines, E Baranauskas, J Mapp, A Bagnall, Classification of time series\n",
+    "by shapelet transformation, Data mining and knowledge discovery 28, 851-881, 2014\n",
+    "[3]\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
