--- a/KDD-2024/Notebooks/part1_introduction.ipynb
+++ b/KDD-2024/Notebooks/part1_introduction.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Part 1: An Introduction to Time Series Classification (TSC) and Regression (TSER)\n",
+    "# An Introduction to Time Series Classification (TSC) and Regression (TSER)\n",
     "\n",
     "This is the notebook associated with the introduction to the hands-on tutorial on time series classification and regression. The tutorial website is [here](https://aeon-tutorials.github.io/KDD-2024/) and the structure is listed [here](https://aeon-tutorials.github.io/KDD-2024/schedule.html). There are ten sections, with a separate notebook for each section. The sections are:\n",
     "\n",
@@ -55,9 +55,7 @@
     "\n",
     "This tutorial is concerned with the classification and regression modules. These use collections of time series to train and test models. `aeon` has a large number of introductory notebooks available in the [documentation](https://www.aeon-toolkit.org/en/stable/). We only cover the basics here.\n",
     "\n",
-    "If you have any questions, please feel free to join our Slack and ask (a link is\n",
-    "available on aeon README). Time for questions and a chat will also be available\n",
-    "during the tutorial itself.\n",
+    "Time for questions will be available after the tutorial itself. During the tutorial we will monitor the sessions Whova chat for any questions. At any point if you have questions, please feel free to join our [Slack](https://join.slack.com/t/aeon-toolkit/shared_invite/zt-22vwvut29-HDpCu~7VBUozyfL_8j3dLA) and ask (a link is available here and on the `aeon` README). \n",
     "\n",
     "In the following we load and showcase our example EEG datasets. All the datatypes used are 3D numpy arrays."
    ],
@@ -72,13 +70,9 @@
     "\n",
     "`aeon` assumes a single time series is a 2D numpy array of shape `(n_channels, n_timepoints)`. Classifiers and regressors take input collections of time series (and inherit from `BaseCollectionEstimator`). If the series are all equal length, works best with 3D numpy shape `(n_cases, n_channels, n_timepoints)`. Unequal length series are stored in lists of 2D numpy, but the examples we are going to use will be equal length.\n",
     "\n",
-    "This tutorial will use EEG data as a working example. The classification dataset is\n",
-    "made of EEG readings taken from a subject when at rest or when performing a set task\n",
-    "(raising arms). Full info on this data can be found in the `aeon-neuro` [notebook](https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb).\n",
-    "Please do not over interpret any results from this data, it is a simple toy problem to demonstrate functionality.\n",
+    "This tutorial will use EEG data as a working example. The classification dataset is made of EEG readings taken from a subject when at rest or when performing a set task (raising arms). Full info on this data can be found in the `aeon-neuro` [notebook](https://github.com/aeon-toolkit/aeon-neuro/blob/main/examples/data_loading.ipynb). Please do not over interpret any results from this data, it is a simple toy problem to demonstrate functionality.\n",
     "\n",
-    "`aeon` ships with some standard UCR and UEA datasets, and can download them all\n",
-    "directly from [timeseriesclassification.com](https://timeseriesclassification.com)."
+    "`aeon` ships with some standard UCR and UEA datasets, and can download them all directly from [timeseriesclassification.com](https://timeseriesclassification.com)."
    ],
    "metadata": {
     "collapsed": false
@@ -474,7 +468,7 @@
     "from aeon.classification.convolution_based import RocketClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "rc = RocketClassifier(rocket_transform=\"minirocket\")\n",
+    "rc = RocketClassifier(rocket_transform=\"minirocket\", random_state=42)\n",
     "rc.fit(X_train_utsc, y_train_utsc)\n",
     "pred1 = rc.predict(X_test_utsc)\n",
     "accuracy_score(y_test_utsc, pred1)"
@@ -516,7 +510,7 @@
     "from aeon.regression.convolution_based import RocketRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "rr = RocketRegressor(rocket_transform=\"minirocket\")\n",
+    "rr = RocketRegressor(rocket_transform=\"minirocket\", random_state=42)\n",
     "rr.fit(X_train_utser, y_train_utser)\n",
     "pred2 = rr.predict(X_test_utser)\n",
     "mean_squared_error(y_test_utser, pred2)"
@@ -541,7 +535,10 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "pipe = make_pipeline(AutocorrelationFunctionTransformer(n_lags=25), RocketClassifier(rocket_transform=\"minirocket\"))\n",
+    "pipe = make_pipeline(\n",
+    "    AutocorrelationFunctionTransformer(n_lags=25), \n",
+    "    RocketClassifier(rocket_transform=\"minirocket\", random_state=42),\n",
+    ")\n",
     "param_grid = {'rocketclassifier__num_kernels': [5000, 10000, 15000]}\n",
     "grid = GridSearchCV(pipe, param_grid, cv=3)\n",
     "grid.fit(X_train_utsc, y_train_utsc)\n",
@@ -590,7 +587,7 @@
    "source": [
     "## Further information\n",
     "\n",
-    "There is a lot of information avaiable in the `aeon` documentation.\n",
+    "There is a lot of information avaiable in the `aeon` documentation:\n",
     "\n",
     "[`aeon` webpage](https://www.aeon-toolkit.org/en/stable/)\n",
     "\n",
@@ -600,29 +597,16 @@
     "\n",
     "[Regression notebook](https://www.aeon-toolkit.org/en/stable/examples/regression/regression.html)\n",
     "\n",
-    "You can get results published in bake offs directly using aeon.\n",
+    "You can get results published in bake offs directly using `aeon`:\n",
     "\n",
     "[Getting published results directly](https://www.aeon-toolkit.org/en/stable/examples/benchmarking/bakeoff_results.html)\n",
     "\n",
-    "More info on benchmarking\n",
+    "More info on benchmarking:\n",
     "\n",
     "[benchmarking](https://www.aeon-toolkit.org/en/stable/examples/benchmarking/benchmarking.html)\n",
     "\n",
-    "If you find anything wrong or unclear in the aeon documentation, please raise an issue on GitHub or mention it on Slack, we welcome new contributors.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "If you find anything wrong or unclear in the `aeon` documentation, please raise an issue on GitHub or mention it on Slack, we welcome new contributors."
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
