--- a/KDD-2024/Notebooks/part9_hybrids.ipynb
+++ b/KDD-2024/Notebooks/part9_hybrids.ipynb
@@ -3,11 +3,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Part9: Hybrid classification\n",
+    "`KDD2024 Tutorial / A Hands-On Introduction to Time Series Classification and Regression`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Part9: Hybrid Estimators for Time Series Machine Learning in `aeon`\n",
     "\n",
     "`aeon` contains two hard coded hybrid classifiers, HIVE-COTEV1 (HC1) and HIVE-COTEV2\n",
-    "(HC2). We will just use HC2 in this example.\n",
-    "\n"
+    "(HC2). We will just use HC2 in this example.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -84,8 +92,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "HC2 is not designed to be fast on small examples. We can if we want set the contract\n",
-    "to reduce the run time and set number of jobs."
+    "HC2 is not designed to be fast on small examples. For ease of example we can set the contract\n",
+    "to reduce the run time and set number of jobs and can be recovered like this."
    ],
    "metadata": {
     "collapsed": false
@@ -99,8 +107,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Single channel EEG TSC problem accuracy: 0.7\n",
-      " Component weights= {}\n"
+      "Single channel EEG TSC problem accuracy: 0.55\n",
+      "STC weight = 0.586181640625\n",
+      "DrCIF weight = 0.8145062499999999\n",
+      "Arsenal weight = 0.7320941406250001\n",
+      "TDE weight = 0.4632503906249999\n"
      ]
     }
    ],
@@ -109,7 +120,10 @@
     "hc2 = HIVECOTEV2(n_jobs  = -1, time_limit_in_minutes=2)\n",
     "hc2.fit(X_train_utsc, y_train_utsc)\n",
     "print(\"Single channel EEG TSC problem accuracy:\", hc2.score(X_test_utsc, y_test_utsc))\n",
-    "print(\" Component weights=\",hc2.component_probas)"
+    "print(\"STC weight = \" + str(hc2.stc_weight_))\n",
+    "print(\"DrCIF weight = \" + str(hc2.drcif_weight_))\n",
+    "print(\"Arsenal weight = \" + str(hc2.arsenal_weight_))\n",
+    "print(\"TDE weight = \" + str(hc2.tde_weight_))"
    ],
    "metadata": {
     "collapsed": false
@@ -118,7 +132,37 @@
   {
    "cell_type": "markdown",
    "source": [
-    "HC2 weights each component based on an estimate of the accuracy from the train data."
+    "## Make your own hybrid estimator\n",
+    "\n",
+    "HC2 is hard coded as an estimator so we can recreate results and use it as the\n",
+    "authors proposed it. However, you can make your own weighted ensemble."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some ensemble accuracy: 0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aeon.classification import DummyClassifier\n",
+    "from aeon.classification.convolution_based import RocketClassifier\n",
+    "from aeon.classification.feature_based import FreshPRINCEClassifier\n",
+    "from aeon.classification.compose._ensemble import ClassifierEnsemble\n",
+    "\n",
+    "clf = [DummyClassifier(), RocketClassifier(), FreshPRINCEClassifier()]\n",
+    "ens = ClassifierEnsemble(clf, weights=[0.1, 0.3, 0.6])\n",
+    "ens.fit(X_train_utsc, y_train_utsc)\n",
+    "print(\"Some ensemble accuracy:\", ens.score(X_test_utsc, y_test_utsc))"
    ],
    "metadata": {
     "collapsed": false
