--- a/KDD-2024/Notebooks/part9_hybrids.ipynb
+++ b/KDD-2024/Notebooks/part9_hybrids.ipynb
@@ -22,6 +22,20 @@
    }
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
+    "# Remove this cell if you are interested in finding out what is changing soon, for\n",
+    "# aeon there will be big changes in out v1.0.0 release!\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [
@@ -41,20 +55,13 @@
     }
    ],
    "source": [
-    "# There are some deprecation warnings present in the notebook, we will ignore them.\n",
-    "# Remove this cell if you are interested in finding out what is changing soon, for\n",
-    "# aeon there will be big changes in out v1.0.0 release!\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
-    "from aeon.datasets import load_classification\n",
+    "\n",
     "trainX = np.random.random((20,3, 100)) # Random collection of 20 series, each with 3 channels and 100 timepoints\n",
     "train_labels = np.random.randint(0, 2, 20) # Random labels\n",
     "train_target = np.random.random(20) # Random regression target\n",
-    "# load EEG example here\n",
     "\n",
-    "from aeon.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "# load EEG example here\n",
     "from aeon.datasets import load_from_tsfile\n",
     "\n",
     "# Load the univariate EEG TSC dataset as a 3D numpy array\n",
